--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@fullcalendar/interaction": "^4.4.0",
     "@fullcalendar/timegrid": "^4.4.0",
     "@fullcalendar/vue": "^4.4.0",
+    "@vue/composition-api": "^1.7.0",
     "axios": "0.18.1",
     "clipboard": "2.0.4",
     "codemirror": "^5.58.2",
