--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "CCIT快速开发平台",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development VUE_APP_BASE_API=/dev vue-cli-service serve --open",
+    "dev": "cross-env NODE_ENV=development VUE_APP_BASE_API=/dev vue-cli-service serve",
     "build": "cross-env NODE_ENV=production VUE_APP_BASE_API= vue-cli-service build",
     "build:staging": "cross-env NODE_ENV=production vue-cli-service build --mode staging",
     "build:javaBootTest": "cross-env NODE_ENV=production vue-cli-service build --mode javaBootTest",
