--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,13 +1,27 @@
-{ 
+{
   "compilerOptions": {
     "baseUrl": "./",
-    "jsx":"preserve",
+    "jsx": "preserve",
     "paths": {
-        "@/*": ["src/*"],
-        "@bff/*":["src/bff/*"],
-        "@bizv/*":["src/views/biz/*"],
-        "@bizc/*":["src/components/Biz/*"],
+      "@/*": [
+        "src/*"
+      ],
+      "@bff/*": [
+        "src/bff/*"
+      ],
+      "@bizv/*": [
+        "src/views/biz/*"
+      ],
+      "@bizc/*": [
+        "src/components/Biz/*"
+      ],
     }
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist"
+  ],
+  // "vueCompilerOptions": {
+  //   "target": 2
+  // }
 }
