--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@fullcalendar/timegrid": "^4.4.0",
     "@fullcalendar/vue": "^4.4.0",
     "@vue/composition-api": "^1.7.0",
+    "@vueuse/core": "^9.2.0",
     "axios": "0.18.1",
     "clipboard": "2.0.4",
     "codemirror": "^5.58.2",
