--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "showdown": "^1.9.1",
     "sortablejs": "1.8.4",
     "throttle-debounce": "^2.1.0",
+    "uuid": "^3.4.0",
     "vue": "2.6.10",
     "vue-count-to": "1.0.13",
     "vue-drag-resize": "^1.4.2",
@@ -98,6 +99,7 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
     "@babel/plugin-proposal-optional-chaining": "^7.18.9",
     "@babel/register": "7.0.0",
+    "@types/uuid": "^8.3.4",
     "@vue/cli-plugin-babel": "3.5.3",
     "@vue/cli-plugin-eslint": "^3.9.1",
     "@vue/cli-plugin-unit-jest": "3.5.3",
