--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@fullcalendar/vue": "^4.4.0",
     "@vue/composition-api": "^1.7.0",
     "@vueuse/core": "^9.2.0",
-    "axios": "0.18.1",
+    "axios": "^0.27.2",
     "clipboard": "2.0.4",
     "codemirror": "^5.58.2",
     "dayjs": "^1.8.29",
@@ -65,7 +65,7 @@
     "jsencrypt": "^3.0.0-rc.1",
     "jsonlint": "1.6.3",
     "jszip": "3.2.1",
-    "maggot-form": "^1.1.3",
+    "maggot-form": "^1.3.1",
     "maggot-table": "^1.2.3",
     "moment": "^2.29.1",
     "monaco-editor": "^0.20.0",
